<resources>
    <string name="app_name">FlashCardApp</string>
    <string name="add_card">Add   card</string>
    <string name="start_quiz">start Quiz</string>
    <string name="menu">menu</string>
    <string name="todo">TODO</string>
    <string name="question">Question</string>
    <string name="option_1">option 1</string>
    <string name="option4">option4</string>
    <string name="option3">option3</string>
    <string name="option2">option2</string>
    <string name="write_question_here">write question here</string>
    <string name="write_option_4_here">write option 4 here</string>
    <string name="write_option_3_here">write option 3 here</string>
    <string name="write_option_2_here">write option 2 here</string>
    <string name="write_option_1_here">write option 1 here</string>
    <string name="add">Add</string>
    <string name="enter_the_right_answer">Enter the right answer</string>
    <string name="wrong_ans">Wrong Ans</string>
    <string name="_0">0</string>
    <string name="correct_ans">Correct Ans</string>
    <string name="flashcard_app">FlashCard App</string>
</resources>