<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/ic_flash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestion">


    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rectengle"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_ans"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"/>

    <TextView
        android:id="@+id/rans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_0"
        android:textColorHint="@color/Green"
        android:textColor="@color/Green"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="165dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_ans"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="10dp"/>

    <TextView

        android:id="@+id/wans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_0"
        android:textColorHint="@color/Red"
        android:textColor="@color/Red"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="55dp"/>


    <TextView
        android:id="@+id/opt1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:text="@string/option_1"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/rectengle"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/question"
        android:layout_marginTop="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/opt2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:text="@string/option2"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/rectengle"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/opt1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/opt3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:text="@string/option3"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/rectengle"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/opt2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/opt4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:text="@string/option4"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/rectengle"
        app:layout_constraintTop_toBottomOf="@id/opt3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>