<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flashRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_flash"
        android:layout_marginTop="65dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fmenu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/purple_200"
        android:elevation="8dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@id/fmenu"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="35dp"
        android:text="@string/add_card"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:elevation="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        android:text="@string/start_quiz"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fmenu"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="80dp"
        android:visibility="gone"
        android:elevation="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>